--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "quizapp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://luke01455.github.io/QuizApp",
+  "homepage": ".",
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
     "@testing-library/jest-dom": "^4.2.4",
@@ -56,6 +56,7 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "https://quizapplicationserver.herokuapp.com/",
   "devDependencies": {
     "redux-devtools": "^3.5.0"
   }
